k8s/services/archivebox/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: archivebox
          image: ghcr.io/archivebox/archivebox
          args: ["server", "--init", "[::]:5797"]
          ports:
            - name: http
              containerPort: 5797
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: archivebox-data
