k8s/services/archivebox/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: archivebox
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: archivebox
  hostnames:
    - archive.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: archivebox
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: archivebox
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: archivebox
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/archivebox/
    clientID: archivebox
    clientSecret:
      name: archivebox-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
  jwt:
    providers:
      - name: authentik
        issuer: https://auth.lama-corp.space/application/o/archivebox/
        remoteJWKS:
          uri: https://auth.lama-corp.space/application/o/archivebox/jwks/
        claimToHeaders:
          - header: "X-Remote-User"
            claim: preferred_username
