k8s/services/archivebox/app/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-world
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - world
